--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -11,6 +11,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 This document describes what Maker apps are and how users interact with them on the Helium Network.
 
+Followed by a listing of the available Maker Apps.
+
 Beginning March 2022, all [HIP-19](https://github.com/dewi-alliance/hotspot-manufacturers#readme)
 Hotspot Manufacturers (aka Makers) are required to support their customers with a bespoke Mobile App
 to onboard their Hotspots, maintain their Hotspots with diagnostic tools, and various basic
@@ -53,6 +55,28 @@ The following features are supported in the Maker Starter App:
 - Settings with PIN Code and language selection
 - Deeplinking to [Helium Wallet](/wallets/app-wallet) to sign transactions
 
+## Alternatives to Maker Apps ##
+
+The [Helium Hotspot App](/wallets/app-wallet) no longer supports changes on hotspots other than the Helium Branded hotspot.
+We recommend using the specific Maker App listed further below for your hotspot as it can have additional 
+management and diagnostic capabilities and continued use encourages makers to continue to develop 
+it further.
+
+Helium application tools company Hotspotty have released a non maker specific app that can help with basic onboarding, 
+location asserting and height or antenna updates where a maker app may not yet be available or has a support issue.
+Select the maker name in the Hotspotty App to check if they support your vendor at the current time.
+
+- App info: https://docs.hotspotty.net/hotspotty-connect/
+
+This app requires connection to the new [Helium Wallet](/wallets/helium-wallet-app) and requires HNT funds in the maker wallet or 
+your wallet to perform onboarding, location asserts, antennna or height updates.
+
+When there is a need to change a hotspots Wifi connection without the requirement to connect to a 
+wallet the unofficial Helium Hotspot Utility from Kent Williams is available.
+
+- iOS App: https://apps.apple.com/us/app/helium-hotspot-utility/id1527367455
+- Android App: https://play.google.com/store/apps/details?id=com.kentwilliams.hotspotutility
+
 ## Known Maker Apps
 
 :::caution As a Reminder
@@ -76,7 +100,7 @@ The following features are supported in the Maker Starter App:
 ### ClodPi
 
 - Discord : https://discord.gg/unJjAtZHBZ
-- iOS App:
+- iOS App: Not Yet Available
 - Andriod App: https://play.google.com/store/apps/details?id=io.clodpi.hotspots
 
 ### Controllino 
@@ -155,14 +179,14 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - Discord : https://discord.gg/Pt85TrZfxZ
 - Maker Apps: https://heltec.org/maker-app
 - iOS App: https://apps.apple.com/app/heltec-hotspot/id6444391876 (Chengdu Huilite Automation)
-- Android App: Download from Maker-App page
+- Android App: Download from Maker-Apps page
 
 ### Hummingbird
 
 - Discord : https://discord.gg/wUk9nfFGZW
 - Maker Apps: https://www.xdt.com/app.html
 - iOS App: https://apps.apple.com/app/hummingbird-hotspot/id1612429261 (Dealuse Technology Inc)
-- Android App: Download from Maker-App page
+- Android App: Download from Maker-Apps page
 
 ### Kerlink
 
@@ -187,12 +211,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/n3E3gvZr6b
 - Local Dashboard: http://dashboard.longap.com/
-
-:::note This Maker has not yet submitted an App for inclusion on this page.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
+- Maker apps: The LongAP recommendation is to use the Linxdot Maker App
 
 ### MerryIoT
 
@@ -266,7 +285,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/PGeJPDUs8d
 
-:::note This Maker has not yet submitted an App for inclusion on this page. ETA Mid Jan
+:::note This Maker has not yet submitted an App for inclusion on this page. ETA End Jan
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
