formatting updates, sections dividers, capitalization

--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -55,27 +55,33 @@ The following features are supported in the Maker Starter App:
 - Settings with PIN Code and language selection
 - Deeplinking to [Helium Wallet](/wallets/app-wallet) to sign transactions
 
-## Alternatives to Maker Apps ##
+---
 
-The [Helium Hotspot App](/wallets/app-wallet) no longer supports changes on hotspots other than the Helium Branded hotspot.
-We recommend using the specific Maker App listed further below for your hotspot as it can have additional 
-management and diagnostic capabilities and continued use encourages makers to continue to develop 
-it further.
+## Alternatives to Maker Apps
 
-Helium application tools company Hotspotty have released a non maker specific app that can help with basic onboarding, 
-location asserting and height or antenna updates where a maker app may not yet be available or has a support issue.
-Select the maker name in the Hotspotty App to check if they support your vendor at the current time.
+The [Helium Hotspot App](/wallets/app-wallet) no longer supports Hotspots other than the Helium
+Branded Hotspot (also known as "OG" Hotspots)
+
+We recommend using the Maker App listed below for your Hotspot, as it can have additional management
+and diagnostic capabilities. Continued use encourages Makers to continue developing it further.
+
+Helium application tools company Hotspotty has released a non-maker-specific App that can help with
+essential onboarding, location asserting, and height or antenna updates where a Maker App may not be
+available or has a support issue. Select the Maker name in the Hotspotty App to check if they
+support your vendor at the current time.
 
 - App info: https://docs.hotspotty.net/hotspotty-connect/
 
-This app requires connection to the new [Helium Wallet](/wallets/helium-wallet-app) and requires HNT funds in the maker wallet or 
-your wallet to perform onboarding, location asserts, antennna or height updates.
+This app requires connection to the new [Helium Wallet](/wallets/helium-wallet-app) and HNT funds in
+the Maker Wallet or your Wallet to perform onboarding, location asserts, antenna, or height updates.
 
-When there is a need to change a hotspots Wifi connection without the requirement to connect to a 
-wallet the unofficial Helium Hotspot Utility from Kent Williams is available.
+When there is a need to change a Hotspot's Wifi connection without needing to connect to a Wallet,
+the unofficial Helium Hotspot Utility from Kent Williams is available.
 
 - iOS App: https://apps.apple.com/us/app/helium-hotspot-utility/id1527367455
 - Android App: https://play.google.com/store/apps/details?id=com.kentwilliams.hotspotutility
+
+---
 
 ## Known Maker Apps
 
@@ -91,7 +97,7 @@ wallet the unofficial Helium Hotspot Utility from Kent Williams is available.
 - iOS App: https://apps.apple.com/us/app/aitek-app/id1615083798
 - Android App: https://play.google.com/store/apps/details?id=com.aitek.maker
 
-### Bobcat 
+### Bobcat
 
 - Discord : https://discord.gg/2Barf528uj
 - iOS App: https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1595267515
@@ -103,7 +109,7 @@ wallet the unofficial Helium Hotspot Utility from Kent Williams is available.
 - iOS App: Not Yet Available
 - Andriod App: https://play.google.com/store/apps/details?id=io.clodpi.hotspots
 
-### Controllino 
+### Controllino
 
 - Discord : https://discord.gg/HCp6wBuhwF
 
