moving helium Hotspot app to different section
- moving helium Hotspot app page under “MIne HNT”
- redirects for page move
- sidebar updates for page move
- update sidebar label
- update page title
- hide page contents one layer deep, add tabs for tabs

--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -53,24 +53,25 @@ The following features are supported in the Maker Starter App:
 - Set a Location (including gain and elevation)
 - Transfer a Hotspot
 - Settings with PIN Code and language selection
-- Deeplinking to [Helium Wallet](/wallets/app-wallet) to sign transactions
+- Deeplinking to [Helium Wallet](/wallets/helium-wallet-app) to sign transactions
 
 ---
 
 ## Alternatives to Maker Apps
 
-The [Helium Hotspot App](/wallets/app-wallet) no longer supports Hotspots other than the Helium
-Branded Hotspot (also known as "OG" Hotspots)
+The [Helium Hotspot App](/mine-hnt/helium-hotspot-app) no longer supports Hotspots other than the
+Helium Branded Hotspot (also known as "OG" Hotspots)
 
 We recommend using the Maker App listed below for your Hotspot, as it can have additional management
 and diagnostic capabilities. Continued use encourages Makers to continue developing it further.
 
-Helium application tools company Hotspotty has released a non-maker-specific App that can help with
-essential onboarding, location asserting, and height or antenna updates where a Maker App may not be
-available or has a support issue. Select the Maker name in the Hotspotty App to check if they
-support your vendor at the current time.
+Helium application tools company Hotspotty has released a non-maker-specific App
+"[Hotspotty Connect](https://docs.hotspotty.net/hotspotty-connect/)" that can help with essential
+onboarding, location asserting, and height or antenna updates where a Maker App may not be available
+or has a support issue. Select the Maker name in the Hotspotty App to check if they support your
+vendor at the current time.
 
-- App info: https://docs.hotspotty.net/hotspotty-connect/
+- Hotspotty Connect documentation: https://docs.hotspotty.net/hotspotty-connect/
 
 This app requires connection to the new [Helium Wallet](/wallets/helium-wallet-app) and HNT funds in
 the Maker Wallet or your Wallet to perform onboarding, location asserts, antenna, or height updates.
