--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -23,8 +23,8 @@ App supports 24-word seed phrases. If a Hotspot is transferred to a 24-word wall
 ### Requirements
 
 - Only the wallet that owns the Hotspot on the blockchain can initiate a transfer.
-- These steps are for Seller with [Helium Hotspot app](/wallets/app-wallet) version 3.10.0 or
-  higher, other vendor Hotspot Management apps will make the same checks.
+- These steps are for Seller with [Helium Hotspot app](/mine-hnt/helium-hotspot-app) version 3.10.0
+  or higher, other vendor Hotspot Management apps will make the same checks.
 
 * Parties do not need to be physically next to the Hotspot for transfer to succeed.
 
