--- a/docs/wallets/cli.mdx
+++ b/docs/wallets/cli.mdx
@@ -191,8 +191,8 @@ iteration count and the AES-GCM authentication tag.
 ### Import Seed
 
 The `--seed` flag enables you to import a wallet generated elsewhere. For example, you may want to
-import your key from the mobile wallet, so that you can submit transactions that may not be supported
-in the mobile wallet. The `--seed` command supports both 12-word and 24-word imports.
+import your key from the mobile wallet, so that you can submit transactions that may not be
+supported in the mobile wallet. The `--seed` command supports both 12-word and 24-word imports.
 
 Enter the command:
 
@@ -402,7 +402,7 @@ Apps do not currently support 24-word wallets.
 To transfer a Hotspot from a 24-word wallet to a 12-word wallet, follow the steps below.
 
 1. Create a 12-word wallet to receive the Hotspot using the
-   [Helium Hotspot App](/wallets/app-wallet) and record the Public Key.
+   [Helium Wallet App](/wallets/helium-wallet-app) and record the Public Key.
 
 2. Download and install the [Helium Command Line Wallet](/wallets/cli-wallet#installing-cli-wallet)
    as outlined above. and navigate to the installation directory.
