--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -95,11 +95,11 @@ required to view your Hotspot NFT(s) in the Helium Wallet app.
 
 ## Sunsetting the Helium App
 
-> Some users may know the [Helium app](/wallets/app-wallet) as the "Helium Hotspot App" or "the blue
-> app."
+> Some users may know the [Helium app](/mine-hnt/helium-hotspot-app) as the "Helium Hotspot App" or
+> "the blue app."
 
-The existing [Helium Hotspot app](/wallets/app-wallet) will be restricted to only the management of
-Original Helium Hotspots in two phases.
+The existing [Helium Hotspot app](/mine-hnt/helium-hotspot-app) will be restricted to only the
+management of Original Helium Hotspots in two phases.
 
 **Phase 1:**
 
