--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -1,29 +1,34 @@
 ---
-id: app-wallet
-title: Helium Hotspot App
-sidebar_label: Helium Hotspot App
-slug: /wallets/app-wallet
+id: helium-hotspot-app
+title: Helium Hotspot App (is Being Depreciated)
+sidebar_label: 🚫 Helium Hotspot App 🚫
+slug: /mine-hnt/helium-hotspot-app
 ---
 
-# Helium Hotspot App Overview
-
 import useBaseUrl from '@docusaurus/useBaseUrl'
+import Tabs from '@theme/Tabs'
+import TabItem from '@theme/TabItem'
 
 :::warning Sunsetting Features
 
 Wallet-related functionality in the Helium Hotspot app has been migrated to the new
-[Helium Wallet App](/wallets/helium-wallet-app)
+[Helium Wallet App](/wallets/helium-wallet-app).
 
 Hotspot management of non Helium Branded Hotspots in the Helium Hotspot app has been migrated to the
-vendors created apps at [Maker Apps](/mine-hnt/maker-apps)
+vendors created apps at [Maker Apps](/mine-hnt/maker-apps).
 
 :::
+
+<details>
+  <summary>Have an "OG" Hotspot? Click here.</summary>
+
+## Helium Hotspot App Overview
 
 The Helium Hotspot App previously focused on people who want to send or receive HNT or manage
 Hotspots. other activities, such as managing end-devices and OUIs (i.e. users of the network) are
 generally best suited for the command line wallet.
 
-It currently is specifically for managing Only Helium Branded hotspots.
+It currently is specifically for managing **only Helium Branded Hotspots**.
 
 The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
 [Android](https://play.google.com/store/apps/details?id=com.helium.wallet)) included everything you
@@ -47,33 +52,46 @@ Helium wallet, you were able to do things like:
 - [Fleet Mode](/wallets/app-wallet/fleet-mode)
 - [Deep Links and QR Codes](/wallets/app-wallet/deep-links-and-qr-codes)
 
-## Hotspot Tab
+---
 
-The Hotspot tab shows your Hotspot(s). There's a location map, the Hotspots Settings section (gear
-icon), as well as a general health status (Online or Needs Attention). The settings provide access
-to updating the location and WiFi network, as well as running the Hotspots diagnostic report if
-needed.
+## App Tabs
+
+<Tabs block={true}>
+
+<TabItem  value="hotspot_tab" label="Hotspot Tab" default>
 
 <img src={useBaseUrl('img/wallets/helium-app/hotspots-nav.png')} />
+The Hotspot tab shows your Hotspot(s). There's a location map, the Hotspots Settings section (gear icon),
+as well as a general health status (Online or Needs Attention). The settings provide access to updating
+the location and WiFi network, as well as running the Hotspots diagnostic report if needed.
 
-## Account Tab
+</TabItem>
+
+<TabItem  value="account_tab" label="Account Tab" default>
+<img src={useBaseUrl('img/wallets/helium-app/account-nav.png')} />
 
 The Account tab shows your wallet and account balance, Notifications, the Send and Receive options,
 and recent transactions.
 
-<img src={useBaseUrl('img/wallets/helium-app/account-nav.png')} />
+</TabItem>
 
-## Notifications Tab
+<TabItem  value="notifications_tab" label="Notifications Tab" default>
+<img src={useBaseUrl('img/wallets/helium-app/notifications-nav.png')} />
 
 This sections gives you a timeline view of all notifications relevant to your Hotspots and wallet
 transcations.
 
-<img src={useBaseUrl('img/wallets/helium-app/notifications-nav.png')} />
+</TabItem>
 
-## Settings Tab
+<TabItem  value="settings_tab" label="Settings Tab" default>
+<img src={useBaseUrl('img/wallets/helium-app/settings-nav.png')} />
 
 In this section, you can configure your apps PIN settings, set the app Language, reveal the 12
 security words (your private key) for your wallet, and view your current app version. There are also
 access to some help articles and the community Discord channel.
 
-<img src={useBaseUrl('img/wallets/helium-app/settings-nav.png')} />
+</TabItem>
+
+</Tabs>
+
+</details>
