--- a/docs/wallets/twelve-words.mdx
+++ b/docs/wallets/twelve-words.mdx
@@ -11,8 +11,9 @@ When setting up a Helium wallet through the Helium Hotspot app, you are prompted
 12-word seed phrase. These are the mnemonic phrase generated from the private key of your wallet and
 the only way to access the wallet.
 
-The 12-word seed can be used or imported on both the [Helium Hotspot App](/wallets/app-wallet) and
-the [Helium Wallet App](/wallets/helium-wallet-app). You cannot import a 24-word seed phrase in the
+The 12-word seed can be used or imported on both the
+[Helium Hotspot App](/mine-hnt/helium-hotspot-app) and the
+[Helium Wallet App](/wallets/helium-wallet-app). You cannot import a 24-word seed phrase in the
 Helium Hotspot App, these will only work in the Helium Wallet App. Hotspots sent to a 24-word wallet
 can only be managed/transferred by the Hotspot Maker app or the CLI Wallet.
 
@@ -47,7 +48,7 @@ Do not log out of your phone wallet or uninstall the app without first writing d
 
 The only places you are required to enter your 12-word are:
 
-1. The [Helium Hotspot App](/wallets/app-wallet) - on your phone
+1. The [Helium Hotspot App](/mine-hnt/helium-hotspot-app) - on your phone
 2. The [Helium Wallet App](/wallets/helium-wallet-app) - on your phone
 3. The [CLI Wallet](/wallets/cli-wallet) - on your computer
 4. The [Ledger Wallet](/wallets/ledger) - on your computer or phone NEVER enter them into a website.
