--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -95,64 +95,13 @@ required to view your Hotspot NFT(s) in the Helium Wallet app.
 
 ## Sunsetting the Helium App
 
-> Some users may know the [Helium app](/mine-hnt/helium-hotspot-app) as the "Helium Hotspot App" or
-> "the blue app."
+Some users may know "the Helium app" as the "Helium Hotspot App" or "the blue app."
 
-The existing [Helium Hotspot app](/mine-hnt/helium-hotspot-app) will be restricted to only the
-management of Original Helium Hotspots in two phases.
+:::warning Sunsetting Features
 
-**Phase 1:**
-
-> ETA December 19, 2022
-
-- Hotspot App users will be migrated to use the Helium Wallet app for Helium Wallet management.
-- Users can no longer onboard new Hotspots using the Helium App. All new Hotspots will be directed
-  to use the Hotspot's Maker app, web dashboard, or contact email support (in the event that a Maker
-  app is not available).
-
-:::info Maker app Availability
-
-All Makers had a deadline to launch their Maker app by March of 2022. Makers without an app or web
-dashboard either have an app in development or have not responded to requests for additional
-updates.
-
-:::
-
-- Hotspot management for _existing_ Hotspots still available in the Hotspot App.
-- The `transfer_hotspot` and `assert_location` will use the Helium Wallet app for signatures.
-
-**Phase 2:**
-
-> ETA January 2023
-
-- Hotspot management will be handled by Maker apps.
-- Original Helium Hotspots will be managed by the Helium App.
-- All remaining Wallet functionality will use the Helium Wallet app.
-
-:::note What If I Miss The Wallet Migration Deadline?
-
-Users that do not transition to the Helium Wallet app prior to the Solana blockchain migration will
-still be able to access their seed phrase and transition to the Helium Wallet app but will not be
-able to submit transactions in the Helium app. Seed phrase export functionality will remain in the
-app for at least 1 year post blockchain migration.
-
-:::
-
-### Maker Apps
-
-Makers will need to update their [Maker Apps](/mine-hnt/maker-apps#known-maker-apps) to use the new
-Solana transaction type to add Hotspots to the network, assert location, and transfer Hotspots.
-
-The core team will make this update available to Makers in an SDK update weeks before the chain halt
-to allow Makers time to make the update, release the app to the app store, and available to Hotspot
-owners.
-
-The minimum app version will change with each Maker - please check with them for exact details.
-
-:::note Maker Updates
-
-Note that Makers that do not update their Maker apps will mean their customers will not be able to
-add new Hotspots to the network, transfer existing Hotspots, or assert locations.
+The existing Helium Hotspot app will be restricted to only the management of Original Helium
+Hotspots. Read more about this upcomging change on the
+[Helium Hotspot App (is Being Depreciated)](/mine-hnt/helium-hotspot-app) page.
 
 :::
 
