Update maker-apps and Helium Hotspot App pages (#1072)
* Update maker-apps.mdx

Added section for hotspotty app and hotspot utility app
updated longap to recommend using Linxdot app

* formatting updates, sections dividers, capitalization

* moving helium Hotspot app to different section

- moving helium Hotspot app page under “MIne HNT”
- redirects for page move
- sidebar updates for page move
- update sidebar label
- update page title
- hide page contents one layer deep, add tabs for tabs

* move sunset information to Hotspot app page

Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -11,6 +11,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 This document describes what Maker apps are and how users interact with them on the Helium Network.
 
+Followed by a listing of the available Maker Apps.
+
 Beginning March 2022, all [HIP-19](https://github.com/dewi-alliance/hotspot-manufacturers#readme)
 Hotspot Manufacturers (aka Makers) are required to support their customers with a bespoke Mobile App
 to onboard their Hotspots, maintain their Hotspots with diagnostic tools, and various basic
@@ -51,7 +53,36 @@ The following features are supported in the Maker Starter App:
 - Set a Location (including gain and elevation)
 - Transfer a Hotspot
 - Settings with PIN Code and language selection
-- Deeplinking to [Helium Wallet](/wallets/app-wallet) to sign transactions
+- Deeplinking to [Helium Wallet](/wallets/helium-wallet-app) to sign transactions
+
+---
+
+## Alternatives to Maker Apps
+
+The [Helium Hotspot App](/mine-hnt/helium-hotspot-app) no longer supports Hotspots other than the
+Helium Branded Hotspot (also known as "OG" Hotspots)
+
+We recommend using the Maker App listed below for your Hotspot, as it can have additional management
+and diagnostic capabilities. Continued use encourages Makers to continue developing it further.
+
+Helium application tools company Hotspotty has released a non-maker-specific App
+"[Hotspotty Connect](https://docs.hotspotty.net/hotspotty-connect/)" that can help with essential
+onboarding, location asserting, and height or antenna updates where a Maker App may not be available
+or has a support issue. Select the Maker name in the Hotspotty App to check if they support your
+vendor at the current time.
+
+- Hotspotty Connect documentation: https://docs.hotspotty.net/hotspotty-connect/
+
+This app requires connection to the new [Helium Wallet](/wallets/helium-wallet-app) and HNT funds in
+the Maker Wallet or your Wallet to perform onboarding, location asserts, antenna, or height updates.
+
+When there is a need to change a Hotspot's Wifi connection without needing to connect to a Wallet,
+the unofficial Helium Hotspot Utility from Kent Williams is available.
+
+- iOS App: https://apps.apple.com/us/app/helium-hotspot-utility/id1527367455
+- Android App: https://play.google.com/store/apps/details?id=com.kentwilliams.hotspotutility
+
+---
 
 ## Known Maker Apps
 
@@ -67,7 +98,7 @@ The following features are supported in the Maker Starter App:
 - iOS App: https://apps.apple.com/us/app/aitek-app/id1615083798
 - Android App: https://play.google.com/store/apps/details?id=com.aitek.maker
 
-### Bobcat 
+### Bobcat
 
 - Discord : https://discord.gg/2Barf528uj
 - iOS App: https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1595267515
@@ -76,10 +107,10 @@ The following features are supported in the Maker Starter App:
 ### ClodPi
 
 - Discord : https://discord.gg/unJjAtZHBZ
-- iOS App:
+- iOS App: Not Yet Available
 - Andriod App: https://play.google.com/store/apps/details?id=io.clodpi.hotspots
 
-### Controllino 
+### Controllino
 
 - Discord : https://discord.gg/HCp6wBuhwF
 
@@ -155,14 +186,14 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 - Discord : https://discord.gg/Pt85TrZfxZ
 - Maker Apps: https://heltec.org/maker-app
 - iOS App: https://apps.apple.com/app/heltec-hotspot/id6444391876 (Chengdu Huilite Automation)
-- Android App: Download from Maker-App page
+- Android App: Download from Maker-Apps page
 
 ### Hummingbird
 
 - Discord : https://discord.gg/wUk9nfFGZW
 - Maker Apps: https://www.xdt.com/app.html
 - iOS App: https://apps.apple.com/app/hummingbird-hotspot/id1612429261 (Dealuse Technology Inc)
-- Android App: Download from Maker-App page
+- Android App: Download from Maker-Apps page
 
 ### Kerlink
 
@@ -187,12 +218,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/n3E3gvZr6b
 - Local Dashboard: http://dashboard.longap.com/
-
-:::note This Maker has not yet submitted an App for inclusion on this page.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-:::
+- Maker apps: The LongAP recommendation is to use the Linxdot Maker App
 
 ### MerryIoT
 
@@ -266,7 +292,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
 - Discord : https://discord.gg/PGeJPDUs8d
 
-:::note This Maker has not yet submitted an App for inclusion on this page. ETA Mid Jan
+:::note This Maker has not yet submitted an App for inclusion on this page. ETA End Jan
 
 Use the "Edit this Page" link at the bottom of this page to submit corrections.
 
