[WIP] - manufacturer docs updates

--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -11,12 +11,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Helium is Open Source
 
-The Helium Network is built almost entirely on open source code. And we actively encourage the
+The Helium Network is built almost entirely on open-source code. And we actively encourage the
 community to develop and contribute to all parts of the Network. Below is a subset of the code that
 plays an integral role in the Helium Network. The full list can be found on the official
 [Helium GitHub Organization](https://github.com/helium).
 
-### Helium Blockchain
+## Helium Blockchain
 
 These are the core libraries and repos that make up the Helium blockchain. Most things here are
 written in Erlang.
@@ -42,12 +42,14 @@ written in Erlang.
   in Rust, used to create and administer Helium wallets, and interact with the Helium Network.
 - [Helium JS](https://github.com/helium/helium-js) - Typescript SDKs for interacting with the Helium
   blockchain.
+
 - [Packet Purchaser](https://github.com/helium/packet-purchaser) - Service that buys Helium LoRaWAN
   packets from the Network and delivers them to a target LoRaWAN Network server.
+
 - [Angry Purple Tiger](https://github.com/helium/angry-purple-tiger) - Ever wonder how your Miner
   got its cute little animal name? Here it is.
 
-### LoRaWAN
+## LoRaWAN
 
 The Helium Network is the largest, public LoRaWAN network in the world. This is some of the code
 that makes it possible.
@@ -65,7 +67,11 @@ that makes it possible.
 
 ### Mobile Apps, Web Apps, and Sites
 
+TODO: whole section needs cleanup and notes on what each app is use for/who should use them
+
 - [Helium Wallet App](https://github.com/helium/wallet-app) - Helium wallet app for iOS and Android.
+
+TODO: move to "OG Helium Page"
 
 - [Helium Hotspot App](https://github.com/helium/hotspot-app) - Helium hotspot app for iOS and
   Android.
@@ -76,8 +82,8 @@ that makes it possible.
 - [Helium Docs](https://github.com/helium/docs) - Docusaurus-based docs for all things Helium.
   (You're reading them.)
 
-  - [Installation](/open-source/docs/installation) - How to install the needed components to start
-    helping docs development.
 
-- [Helium Mappers](https://github.com/helium/mappers/) - Community generated coverage map of the
+- [Helium IOT Mappers](https://github.com/helium/mappers/) - Community generated coverage map of the
   Helium network using real-world testing.
+
+TODO: there is an existing page for MOBILE mappers, link to that here maybe?
