--- a/docs/faq/hotspot-manufacturers.mdx
+++ b/docs/faq/hotspot-manufacturers.mdx
@@ -7,17 +7,32 @@ slug: /faq/hotspot-manufacturers
 
 # FAQ - Approved Hotspot Manufacturers
 
-Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network. 
-(These are often referred to as "OGs."). Nova Labs no longer manufacturers Hotspots, but there is 
-now an extensive list of approved manufactures (known in the community as "Makers")
+Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network.
+(These are often referred to as "OGs."). Nova Labs no longer manufacturers Hotspots, but there is
+now an extensive list of approved manufacturers (known in the community as "Makers")
 
-- [All approved Hotspots can be found here](https://helium.com/mine)
-- [All approved Makers can be found here](/mine-hnt/full-hotspots).
 
-* Please be very careful if purchasing a Helium Hotspot from a non-authorized seller. Hotspots can
-  be transferred from one Helium wallet to another. Once they are added to the blockchain, only the
+TODO: section in docs for Manufacturing topics - migrate from google docs and notion
+
+TODO: links to ethics docs
+
+- All approved Hotspots can be found [here](/mine-hnt).
+
+TODO: check this link 👆, likely in notion, should pull into docs
+
+TODO: every product is approved, not every Maker
+
+TODO: merge man docs with maker apps list
+
+- Please be very careful if purchasing a Helium Hotspot from a non-authorized seller. Hotspots can
+  be transferred from one Helium Wallet to another. Once they are added to the blockchain, only the
   owning wallet can transfer it to another. Any transfers are solely between the two entities
   ("Buyer" and "Seller"), and Helium is not involved.
-* Also note that the Helium Hotspot limited warranty is only valid for the original sale to the
+
+TODO: add admonition to this 👆
+
+- Also note that the Helium Hotspot limited warranty is only valid for the original sale to the
   original owner. Resold Helium Hotspots from anyone other than Helium directly are not under any
   warranty whatsoever. Please refer to their documentation for any authorized reseller policy.
+
+TODO: move to OG hotspot page 👆
