internal link fix

--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -26,7 +26,7 @@ TODO: hotspot to hotspot communication is wallet to wallet
 
 We believe proprietary protocols and technologies stifle innovation. This is why we use commodity,
 open-standard hardware, and modules available from dozens of vendors. And all software used is
-[open source under friendly licenses](/open-source/open-source/#helium-is-open-source).
+[open source under friendly licenses](/open-source).
 
 TODO: fix link
 
