relocated maker apps page
- fixup references and links
- setup redirect
- update sidebar

--- a/docs/mine-hnt/full-hotspots/full-hotspots.mdx
+++ b/docs/mine-hnt/full-hotspots/full-hotspots.mdx
@@ -19,8 +19,8 @@ process is governed via
 
 ## Approved Makers
 
-Nova Labs (formerly known as Helium Systems, Inc) was the first Hotspot manufacturer. Starting in 
-early 2019, they produced the first hardware capable of mining HNT and providing LoRaWAN wireless 
+Nova Labs (formerly known as Helium Systems, Inc) was the first Hotspot manufacturer. Starting in
+early 2019, they produced the first hardware capable of mining HNT and providing LoRaWAN wireless
 coverage. In total, Nova Labs produced and sold the first 13,000 Hotspots to the Helium community to
 seed the Network.
 
@@ -53,4 +53,4 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 - [Hotspot BLE Services](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services)
 - [Hotspot WiFi Configuration](/mine-hnt/full-hotspots/become-a-maker/hotspot-wifi-configuration)
 - [Burning HNT to your Maker Wallet](/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet)
-- [Create a Maker App](/mine-hnt/maker-apps)
+- [Create a Maker App](/hotspot-makers/maker-apps)
