--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -15,7 +15,7 @@ Wallet-related functionality in the Helium Hotspot app has been migrated to the 
 [Helium Wallet App](/wallets/helium-wallet-app).
 
 Hotspot management of non Helium Branded Hotspots in the Helium Hotspot app has been migrated to the
-vendors created apps at [Maker Apps](/mine-hnt/maker-apps).
+vendors created apps at [Maker Apps](/hotspot-makers/maker-apps).
 
 :::
 
@@ -66,8 +66,9 @@ app for at least 1 year post blockchain migration.
 
 ### Maker Apps
 
-Makers will need to update their [Maker Apps](/mine-hnt/maker-apps#known-maker-apps) to use the new
-Solana transaction type to add Hotspots to the network, assert location, and transfer Hotspots.
+Makers will need to update their [Maker Apps](/hotspot-makers/maker-apps#known-maker-apps) to use
+the new Solana transaction type to add Hotspots to the network, assert location, and transfer
+Hotspots.
 
 The core team will make this update available to Makers in an SDK update weeks before the chain halt
 to allow Makers time to make the update, release the app to the app store, and available to Hotspot
