--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -36,7 +36,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 :::
 
 The Helium Wallet app is the trusted way to manage your tokens and identity on the Helium
-Blockchain. 
+Blockchain.
 
 Some notable features:
 
@@ -48,7 +48,7 @@ Some notable features:
 - Multiple Recipient Payment Support
 
 All Hotspot Management (diagnostics, asserting location, adding Hotspots, etc) should be done via
-the [Maker Apps](/mine-hnt/maker-apps) available from the manufacturer.
+the [Maker Apps](/hotspot-makers/maker-apps) available from the manufacturer.
 
 ## Wallets and Accounts
 
