--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -16,7 +16,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <div className="headertext">
           <h1 style={{ marginTop: 0 }}>Mine HNT</h1>
           <h2 className="subtitle">
-            Helium Hotspots mine $HNT and are built by our growing ecosystem of approved 
+            Helium Hotspots mine $HNT and are built by our growing ecosystem of approved
             manufacturers.
           </h2>
           <div>
@@ -26,7 +26,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
             <a href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing">
               <span class="badge badge--secondary">Maker Approval</span>
             </a>
-            <a href="/mine-hnt/maker-apps">
+            <a href="/hotspot-makers/maker-apps">
               <span class="badge badge--secondary">Maker Apps</span>
             </a>
             <a href="/mine-hnt/understanding-hotspot-status">
@@ -107,7 +107,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <h3>Maker Apps</h3>
         <p style={{ marginBottom: 40 }}>
           Makers have their own App to perform Hotspot onboarding, diagnostics, and troubleshooting.{' '}
-          <a href="/mine-hnt/maker-apps">Read more here</a>
+          <a href="/hotspot-makers/maker-apps">Read more here</a>
         </p>
       </div>
     </div>
