relocated original helium Hotspot docs

--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -2,7 +2,7 @@
 id: maker-apps
 title: Maker Apps
 sidebar_label: Maker Apps
-slug: /mine-hnt/maker-apps
+slug: /hotspot-makers/maker-apps
 ---
 
 # Maker Apps
