--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -85,79 +85,9 @@ add new Hotspots to the network, transfer existing Hotspots, or assert locations
 
 ---
 
-<details>
-  <summary>Have an "OG" Hotspot? Click here.</summary>
+:::info What about Original Helium Hotspots?
 
-## Helium Hotspot App Overview
+Have an Original Helium "OG" Hotspot? Use the Helium Hotspot App Guide
+[here](/hotspot-makers/original-helium-hotspot).
 
-The Helium Hotspot App previously focused on people who want to send or receive HNT or manage
-Hotspots. other activities, such as managing end-devices and OUIs (i.e. users of the network) are
-generally best suited for the command line wallet.
-
-It currently is specifically for managing **only Helium Branded Hotspots**.
-
-The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
-[Android](https://play.google.com/store/apps/details?id=com.helium.wallet)) included everything you
-need to on-board and maintain your Hotspot and view its activity. With the app, which was also your
-Helium wallet, you were able to do things like:
-
-- Add your Hotspot to the network and set your location
-- Configure your Wi-Fi
-- View your Hotspot's activity
-- See where other Hotspots are located
-
-[Check out the latest app release notes](https://docs.helium.com/devblog)
-
-## Guides
-
-- [Twelve Word Seed Phrase](/wallets/twelve-words)
-- [Twenty Four Word Seed Phrase](/wallets/twenty-four-words)
-- [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
-- [Understanding Hexagons](/wallets/app-wallet/hexagons)
-- [Transaction Failures](/wallets/app-wallet/transaction-failures)
-- [Fleet Mode](/wallets/app-wallet/fleet-mode)
-- [Deep Links and QR Codes](/wallets/app-wallet/deep-links-and-qr-codes)
-
----
-
-## App Tabs
-
-<Tabs block={true}>
-
-<TabItem  value="hotspot_tab" label="Hotspot Tab" default>
-
-<img src={useBaseUrl('img/wallets/helium-app/hotspots-nav.png')} />
-The Hotspot tab shows your Hotspot(s). There's a location map, the Hotspots Settings section (gear icon),
-as well as a general health status (Online or Needs Attention). The settings provide access to updating
-the location and WiFi network, as well as running the Hotspots diagnostic report if needed.
-
-</TabItem>
-
-<TabItem  value="account_tab" label="Account Tab" default>
-<img src={useBaseUrl('img/wallets/helium-app/account-nav.png')} />
-
-The Account tab shows your wallet and account balance, Notifications, the Send and Receive options,
-and recent transactions.
-
-</TabItem>
-
-<TabItem  value="notifications_tab" label="Notifications Tab" default>
-<img src={useBaseUrl('img/wallets/helium-app/notifications-nav.png')} />
-
-This sections gives you a timeline view of all notifications relevant to your Hotspots and wallet
-transcations.
-
-</TabItem>
-
-<TabItem  value="settings_tab" label="Settings Tab" default>
-<img src={useBaseUrl('img/wallets/helium-app/settings-nav.png')} />
-
-In this section, you can configure your apps PIN settings, set the app Language, reveal the 12
-security words (your private key) for your wallet, and view your current app version. There are also
-access to some help articles and the community Discord channel.
-
-</TabItem>
-
-</Tabs>
-
-</details>
+:::
