--- a/docs/hotspot-makers/hotspot-manufacturers.mdx
+++ b/docs/hotspot-makers/hotspot-manufacturers.mdx
@@ -24,15 +24,13 @@ TODO: every product is approved, not every Maker
 
 TODO: merge man docs with maker apps list
 
-- Please be very careful if purchasing a Helium Hotspot from a non-authorized seller. Hotspots can
-  be transferred from one Helium Wallet to another. Once they are added to the blockchain, only the
-  owning wallet can transfer it to another. Any transfers are solely between the two entities
-  ("Buyer" and "Seller"), and Helium is not involved.
+TODO: merge manufacturer docs with maker apps list
 
-TODO: add admonition to this 👆
+:::caution Be Careful
 
-- Also note that the Helium Hotspot limited warranty is only valid for the original sale to the
-  original owner. Resold Helium Hotspots from anyone other than Helium directly are not under any
-  warranty whatsoever. Please refer to their documentation for any authorized reseller policy.
+Please be very careful if purchasing a Helium Hotspot from a non-authorized seller. Hotspots can be
+transferred from one Helium Wallet to another. Once they are added to the blockchain, only the
+owning wallet can transfer it to another. Any transfers are solely between the two entities ("Buyer"
+and "Seller"), and Helium is not involved.
 
-TODO: move to OG hotspot page 👆
+:::
