--- a/docs/faq/docs-installation.mdx
+++ b/docs/faq/docs-installation.mdx
@@ -1,8 +1,11 @@
 ---
-id: installation
-hide_title: false
-sidebar_label: Installation Guide
-slug: /open-source/docs/installation
+id: docs-installation
+title: Docs Installation Guide
+pagination_label: Docs Installation Guide
+sidebar_label: Contributing Documentation
+description: Docs Installation Guide
+# Image:
+slug: /faq/docs-installation
 ---
 
 # Helium Documentation Installation Guide
