--- a/docs/faq/open-source.mdx
+++ b/docs/faq/open-source.mdx
@@ -1,8 +1,11 @@
 ---
 id: open-source
-hide_title: true
-sidebar_label: Overview
-slug: /open-source
+title: Open Source
+pagination_label: Open Source
+sidebar_label: Open Source
+description: Open Source
+# Image:
+slug: /faq/open-source
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -38,8 +41,10 @@ written in Erlang.
 
 - [Erlang libp2p](https://github.com/helium/erlang-libp2p) - Libp2p swarms written in (you guessed
   it) Erlang.
+
 - [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs) - Command Line Interface, written
   in Rust, used to create and administer Helium wallets, and interact with the Helium Network.
+
 - [Helium JS](https://github.com/helium/helium-js) - Typescript SDKs for interacting with the Helium
   blockchain.
 
@@ -67,11 +72,7 @@ that makes it possible.
 
 ### Mobile Apps, Web Apps, and Sites
 
-TODO: whole section needs cleanup and notes on what each app is use for/who should use them
-
 - [Helium Wallet App](https://github.com/helium/wallet-app) - Helium wallet app for iOS and Android.
-
-TODO: move to "OG Helium Page"
 
 - [Helium Hotspot App](https://github.com/helium/hotspot-app) - Helium hotspot app for iOS and
   Android.
@@ -82,8 +83,5 @@ TODO: move to "OG Helium Page"
 - [Helium Docs](https://github.com/helium/docs) - Docusaurus-based docs for all things Helium.
   (You're reading them.)
 
-
 - [Helium IOT Mappers](https://github.com/helium/mappers/) - Community generated coverage map of the
   Helium network using real-world testing.
-
-TODO: there is an existing page for MOBILE mappers, link to that here maybe?
