--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -1,7 +1,10 @@
 ---
 id: build-on-network
-title: Build On IOT Network FAQ
-sidebar_label: Build On IOT Network
+title: Build on the IOT Network FAQ
+pagination_label: Build on the IOT Network
+sidebar_label: Build on the IOT Network
+description: Build on the IOT Network
+# Image:
 slug: /faq/build-on-network
 ---
 
