Add prelim docs for different system actors

--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -9,8 +9,19 @@ hide_table_of_contents: true
 # Introduction
 
 As of [HIP-70, Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
-helium is moving to the Solana blockchain. These docs are for anyone developing directly against
-the Helium programs on the Solana Blockchain
+helium is moving to the Solana blockchain.
+
+## Migration Guides
+
+The following are migration guides for different users of Helium:
+
+  * [Hotspot Owner](./migration/hotspot_owner.mdx)
+  * [Maker](./migration/maker.mdx)
+  * [Exchange](/solana/migration/exchange)
+  * [LoRaWAN Network User](./migration/network_user.mdx)
+  * [Application Builder](./migration/application_builder.mdx)
+  * [Governance Participant](./migration/governance.mdx)
+  * [Ledger User](./migration/ledger.mdx)
 
 ## Programs
 
