add another todo

--- a/docs/solana/migration/maker.mdx
+++ b/docs/solana/migration/maker.mdx
@@ -7,3 +7,9 @@ hide_table_of_contents: true
 ---
 
 // TODO: Nova labs, maker sdk update
+
+# Maker Migration
+
+## Data Credits and Sol for Onboarding
+
+// TODO: We need to create an easy way for makers to get sol and data credits into their accounts
