--- a/docs/faq/build-on-network.mdx
+++ b/docs/faq/build-on-network.mdx
@@ -29,18 +29,9 @@ TODO: hotspot to hotspot communication is wallet to wallet
 
 We believe proprietary protocols and technologies stifle innovation. This is why we use commodity,
 open-standard hardware, and modules available from dozens of vendors. And all software used is
-[open source under friendly licenses](/open-source).
+[open source under friendly licenses](/faq/open-source).
 
-TODO: fix link
-
-## Which frequencies does the Helium Hotspot use? Are you evaluating other frequencies in different countries?
-
-Hotspots create LoRaWAN coverage with sub-GHz unlicensed spectrum that varies country by country.
-You can [view the frequency used per country here](/lorawan-on-helium/frequency-plans).
-
-TODO: fix link,
-
-## What kind of data rates do you anticipate going from device to the hotspot?
+## What kind of data rates do you anticipate going from device to the Hotspot?
 
 Applications that are suitable for the Helium Network send small amounts of data. The maximum amount
 possible is around 5kbits per second. But this is rarely seen in production. Typically sensors are
