added warning admonitions to page headers

--- a/docs/solana/migration/application_builder.mdx
+++ b/docs/solana/migration/application_builder.mdx
@@ -6,6 +6,14 @@ slug: /solana/migration/application-builder
 hide_table_of_contents: true
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
 # Application Builder Migration
 
 As an application builder on top of Helium, many of the APIs and interfaces are changing. 
