--- a/docs/solana/migration/hotspot_owner.mdx
+++ b/docs/solana/migration/hotspot_owner.mdx
@@ -6,10 +6,18 @@ slug: /solana/migration/hotspot-owner
 hide_table_of_contents: true
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
 # Hotspot Owner Migration
 
 As a hotspot owner, you will not need to do anything for the migration. You do not need to power your
-hotspot off, you can leave it on and we'll do the rest!
+Hotspot off, you can leave it on and we'll do the rest!
 
 If you use the Helium Wallet App (Black App), you will see it enter a "transitioning" state during
 the 24 hour downtime of the migration. Once the transition is over, you can open the app again,
