--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -6,8 +6,15 @@ slug: /solana/migration/ledger
 hide_table_of_contents: true
 ---
 
-# Ledger Migration
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
+# Ledger Migration
 // TODO: Nova
 
 To migrate your ledger to the Solana network, you will need to download the latest verion of the Solana
