--- a/docs/solana/migration/maker.mdx
+++ b/docs/solana/migration/maker.mdx
@@ -6,9 +6,17 @@ slug: /solana/migration/maker
 hide_table_of_contents: true
 ---
 
-// TODO: Nova labs, maker sdk update
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
 
 # Maker Migration
+
+// TODO: Nova labs, maker sdk update
 
 ## Data Credits and Sol for Onboarding
 
