--- a/docs/solana/migration/migration-infrastructure.mdx
+++ b/docs/solana/migration/migration-infrastructure.mdx
@@ -10,6 +10,12 @@ slug: /solana/migration/migration-infrastructure
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
 # Solana Migration for Infrastructure
 
 The migration of the Helium Network from its L1 to Solana brings several changes to the setup of the
