--- a/docs/solana/migration/network_user.mdx
+++ b/docs/solana/migration/network_user.mdx
@@ -6,6 +6,14 @@ slug: /solana/migration/network-user
 hide_table_of_contents: true
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
 # Network User Migration
 
 As a network user, you will not need to do anything during the migration. The network should continue
