--- a/docs/solana/oracle_data.mdx
+++ b/docs/solana/oracle_data.mdx
@@ -6,6 +6,14 @@ slug: /oracle-data
 hide_table_of_contents: true
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
 # Oracle Data
 
 // TODO: s3 access, etc.
