--- a/docs/solana/primer.mdx
+++ b/docs/solana/primer.mdx
@@ -6,6 +6,14 @@ slug: /solana-primer
 hide_table_of_contents: true
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
 # Primer on Solana Programming
 
 This guide exists to give an overview of helium data on Solana, and some general Solana programming
