--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -6,6 +6,14 @@ slug: /solana
 hide_table_of_contents: true
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
 # Introduction
 
 As of [HIP-70, Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
