--- a/docs/solana/migration/governance.mdx
+++ b/docs/solana/migration/governance.mdx
@@ -6,6 +6,14 @@ slug: /solana/migration/governance
 hide_table_of_contents: true
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
 # Governance Migration
 
 After the migration, [Helium Vote](https://helium.vote) will transition to using Solana SPL Governance Realms.
