--- a/docs/solana/rewardable_entities.mdx
+++ b/docs/solana/rewardable_entities.mdx
@@ -6,6 +6,14 @@ slug: /rewardable-entites
 hide_table_of_contents: true
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning 🚧 This document is a work in progress. 🚧
+
+The documentation on Solana and the upcoming Migration is under development and subject to change.
+
+:::
+
 # Rewardable Entities (Hotspots, Mappers, and more)
 
 Following the transition to Solana, all actors in the network that receive tokens are considered "Rewardable Entities."
