cross link fixes and file renames

--- a/docs/solana/oracle-data.mdx
+++ b/docs/solana/oracle-data.mdx
@@ -2,7 +2,7 @@
 id: oracle-data
 sidebar_label: Oracle Data
 hide_title: true
-slug: /oracle-data
+slug: /solana/oracle-data
 hide_table_of_contents: true
 ---
 
