--- a/docs/solana/primer.mdx
+++ b/docs/solana/primer.mdx
@@ -2,7 +2,7 @@
 id: primer
 sidebar_label: Primer on Solana Programming
 hide_title: true
-slug: /solana-primer
+slug: /solana/primer
 hide_table_of_contents: true
 ---
 
