--- a/docs/solana/solana.mdx
+++ b/docs/solana/solana.mdx
@@ -23,13 +23,13 @@ helium is moving to the Solana blockchain.
 
 The following are migration guides for different users of Helium:
 
-  * [Hotspot Owner](./migration/hotspot_owner.mdx)
-  * [Maker](./migration/maker.mdx)
-  * [Exchange](/solana/migration/exchange)
-  * [LoRaWAN Network User](./migration/network_user.mdx)
-  * [Application Builder](./migration/application_builder.mdx)
-  * [Governance Participant](./migration/governance.mdx)
-  * [Ledger User](./migration/ledger.mdx)
+- [Hotspot Owner](./solana/migration/hotspot-owner)
+- [Maker](./solana/migration/maker)
+- [Exchange](./solana/migration/exchange)
+- [LoRaWAN Network User](./solana/migration/network-user)
+- [Application Builder](./solana/migration/application-builder)
+- [Governance Participant](./solana/migration/governance)
+- [Ledger User](./solana/migration/ledger)
 
 ## Programs
 
